--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   </path>
                 </svg>
               </div>
-              <h5 style="font-family: Gilroy-SemiBold; color: black;text-align: center;/* margin-top: 17px; */" class="card-title">Autogestión
+              <h5 style=" color: black;text-align: center;/* margin-top: 17px; */" class="card-title">Autogestión
               </h5>
               <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
                 amet consectetur adipisicing elit.</p>
@@ -99,7 +99,7 @@
               <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
             </svg>
           </div>
-          <h5 style="font-family: Gilroy-SemiBold; color: black;text-align: center;/* margin-top: 17px; */" class="card-title">Perfiles GRC
+          <h5 style=" color: black;text-align: center;/* margin-top: 17px; */" class="card-title">Perfiles GRC
           </h5>
           <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
             amet consectetur adipisicing elit.</p>
@@ -119,7 +119,7 @@
               <path fill-rule="evenodd" d="M6 3.5A1.5 1.5 0 0 1 7.5 2h1A1.5 1.5 0 0 1 10 3.5v1A1.5 1.5 0 0 1 8.5 6v1H14a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0v-1A.5.5 0 0 1 2 7h5.5V6A1.5 1.5 0 0 1 6 4.5v-1zm-6 8A1.5 1.5 0 0 1 1.5 10h1A1.5 1.5 0 0 1 4 11.5v1A1.5 1.5 0 0 1 2.5 14h-1A1.5 1.5 0 0 1 0 12.5v-1zm6 0A1.5 1.5 0 0 1 7.5 10h1a1.5 1.5 0 0 1 1.5 1.5v1A1.5 1.5 0 0 1 8.5 14h-1A1.5 1.5 0 0 1 6 12.5v-1zm6 0a1.5 1.5 0 0 1 1.5-1.5h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5v-1z"/>
             </svg>
           </div>
-          <h5 style="font-family: Gilroy-SemiBold; color: black; text-align: center;/* margin-top: 17px; */" class="card-title">Organigrama
+          <h5 style=" color: black; text-align: center;/* margin-top: 17px; */" class="card-title">Organigrama
           </h5>
           <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
             amet consectetur adipisicing elit.</p>
@@ -140,7 +140,7 @@
                   <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                 </svg>
               </div>
-              <h5 style="font-family: Gilroy-SemiBold; color: black; text-align: center;/* margin-top: 17px; */" class="card-title">Aprobaciones
+              <h5 style=" color: black; text-align: center;/* margin-top: 17px; */" class="card-title">Aprobaciones
               </h5>
               <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
                 amet consectetur adipisicing elit.</p>
