--- a/index_2.html
+++ b/index_2.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><b style="font-size: 17px;">Acindar Autogestión</b></a>
+    <a class="navbar-brand" href="#"><b>Acindar</b> <b style="color: orangered;">Autogestión</b></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,25 +28,13 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Favoritos
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">HES</a></li>
-            <li><a class="dropdown-item" href="#">Organigrama</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Recientes
+            Accesos Recientes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Recibo</a></li>
             <li><a class="dropdown-item" href="#">Aprobación Vacaciones</a></li>
             <li><a class="dropdown-item" href="#">Solicitud Anticipo Sueldo</a></li>
           </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Ayuda</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
@@ -58,7 +46,7 @@
 </nav>
 
 <div id="carouselExampleIndicators" class="carousel slide shadow" data-ride="carousel">
-    <div class="carousel-inner" style="height: 195px;">
+    <div class="carousel-inner" style="height: 150px;">
       <div class="carousel-item active">
         <img class="d-block w-100" src="img/banner2.jpg" alt="Primer Banner">
       </div>
@@ -80,72 +68,83 @@
 <div class="row p-0 m-0" style="width: 80%;">
     <div class="col p-0 d-flex justify-content-center">
           <div class="card shadow" style="width: 215px;height: 288px;">
-            <div class="card-body cardWithBackImg">
+            <div class="cardHeader">
+            </div>
+            <div class="card-body">
               <div style="display: flex;justify-content: center; align-items: center;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor"
-                  class="bi bi-person-fill-gear" viewBox="0 0 16 16" style="fill: white;">
+                  class="bi bi-person-fill-gear" viewBox="0 0 16 16" style="fill: orangered;">
                   <path
                     d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm-9 8c0 1 1 1 1 1h5.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.544-3.393C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4Zm9.886-3.54c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.045c-.613-.18-.613-1.048 0-1.229l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382l.045-.148ZM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Z">
                   </path>
                 </svg>
               </div>
-              <h5 style="font-family: Gilroy-SemiBold; color: white;text-align: center;/* margin-top: 17px; */" class="card-title">Autogestión
+              <h5 style="font-family: Gilroy-SemiBold; color: black;text-align: center;/* margin-top: 17px; */" class="card-title">Autogestión
               </h5>
-              <p style="color:white;" class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
+              <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
                 amet consectetur adipisicing elit.</p>
-              <button id="btnSnow" class="btn-acindar-black w-100" data-bs-toggle="modal" data-bs-target="#autogestionModal" >Ingresar</button>
+              <button id="btnSnow" class="btn-acindar-primary w-100" data-bs-toggle="modal" data-bs-target="#autogestionModal" >Ingresar</button>
             </div>
           </div>
     </div>
     <div class="col p-0 d-flex justify-content-center mt-2 mt-sm-2 mt-md-0 mt-lg-0 mt-xl-0">
       <div class="card shadow" style="width: 215px;height: 288px;">
-        <div class="card-body cardWithBackImg">
+        <div class="cardHeader">
+
+        </div>
+        <div class="card-body">
           <div style="display: flex;justify-content: center; align-items: center;">
             <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor"
-              class="bi bi-person-fill-gear" viewBox="0 0 16 16" style="fill: white;">
+              class="bi bi-person-fill-gear" viewBox="0 0 16 16" style="fill: orangered;">
               <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
             </svg>
           </div>
-          <h5 style="font-family: Gilroy-SemiBold; color: white;text-align: center;/* margin-top: 17px; */" class="card-title">Perfiles GRC
+          <h5 style="font-family: Gilroy-SemiBold; color: black;text-align: center;/* margin-top: 17px; */" class="card-title">Perfiles GRC
           </h5>
-          <p style="color:white;" class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
+          <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
             amet consectetur adipisicing elit.</p>
-          <button  class="btn-acindar-black w-100">Ingresar</button>
+          <button  class="btn-acindar-primary w-100">Ingresar</button>
         </div>
       </div>
     </div>
     <div class="col p-0 d-flex justify-content-center mt-2 mt-sm-2 mt-md-0 mt-lg-0 mt-xl-0">
       <div class="card shadow" style="width: 215px;height: 288px;">
-        <div class="card-body cardWithBackImg">
+        <div class="cardHeader">
+
+        </div>
+        <div class="card-body">
           <div style="display: flex;justify-content: center; align-items: center;">
             <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor"
-              class="bi bi-person-fill-gear" viewBox="0 0 16 16" style="fill: white;">
+              class="bi bi-person-fill-gear" viewBox="0 0 16 16" style="fill: orangered;">
               <path fill-rule="evenodd" d="M6 3.5A1.5 1.5 0 0 1 7.5 2h1A1.5 1.5 0 0 1 10 3.5v1A1.5 1.5 0 0 1 8.5 6v1H14a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0v-1A.5.5 0 0 1 2 7h5.5V6A1.5 1.5 0 0 1 6 4.5v-1zm-6 8A1.5 1.5 0 0 1 1.5 10h1A1.5 1.5 0 0 1 4 11.5v1A1.5 1.5 0 0 1 2.5 14h-1A1.5 1.5 0 0 1 0 12.5v-1zm6 0A1.5 1.5 0 0 1 7.5 10h1a1.5 1.5 0 0 1 1.5 1.5v1A1.5 1.5 0 0 1 8.5 14h-1A1.5 1.5 0 0 1 6 12.5v-1zm6 0a1.5 1.5 0 0 1 1.5-1.5h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5v-1z"/>
             </svg>
           </div>
-          <h5 style="font-family: Gilroy-SemiBold; color: white; text-align: center;/* margin-top: 17px; */" class="card-title">Organigrama
+          <h5 style="font-family: Gilroy-SemiBold; color: black; text-align: center;/* margin-top: 17px; */" class="card-title">Organigrama
           </h5>
-          <p style="color:white;" class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
+          <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
             amet consectetur adipisicing elit.</p>
-          <a id="btnSnow" class="btn-acindar-black w-100" role="button"
+          <a id="btnSnow" class="btn-acindar-primary w-100" role="button"
             href="https://amamericas.service-now.com/sp_acindar">Ingresar</a>
         </div>
       </div>
     </div>
     <div class="col p-0 d-flex justify-content-center mt-2 mt-sm-2 mt-md-0 mt-lg-0 mt-xl-0">
           <div class="card shadow" style="width: 215px;height: 288px;">
-            <div class="card-body cardWithBackImg">
+            <div class="cardHeader">
+
+            </div>
+            <div class="card-body">
               <div style="display: flex;justify-content: center; align-items: center;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor"
-                  class="bi bi-person-fill-gear" viewBox="0 0 16 16" style="fill: white;">
+                  class="bi bi-person-fill-gear" viewBox="0 0 16 16" style="fill: orangered;">
                   <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                 </svg>
               </div>
-              <h5 style="font-family: Gilroy-SemiBold; color: white; text-align: center;/* margin-top: 17px; */" class="card-title">Aprobaciones
+              <h5 style="font-family: Gilroy-SemiBold; color: black; text-align: center;/* margin-top: 17px; */" class="card-title">Aprobaciones
               </h5>
-              <p style="color: white;" class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
+              <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
                 amet consectetur adipisicing elit.</p>
-                <button id="btnSnow" class="btn-acindar-black w-100" data-bs-toggle="modal" data-bs-target="#aprobacionesModal" >Ingresar</button>
+                <button id="btnSnow" class="btn-acindar-primary w-100" data-bs-toggle="modal" data-bs-target="#aprobacionesModal" >Ingresar</button>
             </div>
           </div>
     </div>
