--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   </path>
                 </svg>
               </div>
-              <h5 style="font-family: Gilroy-SemiBold; color: white;text-align: center;/* margin-top: 17px; */" class="card-title">Autogestión
+              <h5 style="font-family: Gilroy-SemiBold;color: white;text-align: center;margin: 0px;white-space: nowrap;font-size: 18px;margin-top: 10px;" class="card-title">Autogestión
               </h5>
               <p style="color:white;" class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
                 amet consectetur adipisicing elit.</p>
@@ -106,7 +106,7 @@
               <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
             </svg>
           </div>
-          <h5 style="font-family: Gilroy-SemiBold; color: white;text-align: center;/* margin-top: 17px; */" class="card-title">Perfiles GRC
+          <h5 style="font-family: Gilroy-SemiBold;color: white;text-align: center;margin: 0px;white-space: nowrap;font-size: 18px;margin-top: 10px;" class="card-title">Perfiles GRC
           </h5>
           <p style="color:white;" class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
             amet consectetur adipisicing elit.</p>
@@ -123,7 +123,7 @@
               <path fill-rule="evenodd" d="M6 3.5A1.5 1.5 0 0 1 7.5 2h1A1.5 1.5 0 0 1 10 3.5v1A1.5 1.5 0 0 1 8.5 6v1H14a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0v-1A.5.5 0 0 1 2 7h5.5V6A1.5 1.5 0 0 1 6 4.5v-1zm-6 8A1.5 1.5 0 0 1 1.5 10h1A1.5 1.5 0 0 1 4 11.5v1A1.5 1.5 0 0 1 2.5 14h-1A1.5 1.5 0 0 1 0 12.5v-1zm6 0A1.5 1.5 0 0 1 7.5 10h1a1.5 1.5 0 0 1 1.5 1.5v1A1.5 1.5 0 0 1 8.5 14h-1A1.5 1.5 0 0 1 6 12.5v-1zm6 0a1.5 1.5 0 0 1 1.5-1.5h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5v-1z"/>
             </svg>
           </div>
-          <h5 style="font-family: Gilroy-SemiBold; color: white; text-align: center;/* margin-top: 17px; */" class="card-title">Organigrama
+          <h5 style="font-family: Gilroy-SemiBold;color: white;text-align: center;margin: 0px;white-space: nowrap;font-size: 18px;margin-top: 10px;" class="card-title">Organigrama
           </h5>
           <p style="color:white;" class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
             amet consectetur adipisicing elit.</p>
@@ -141,7 +141,7 @@
                   <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                 </svg>
               </div>
-              <h5 style="font-family: Gilroy-SemiBold; color: white; text-align: center;/* margin-top: 17px; */" class="card-title">Aprobaciones
+              <h5 style="font-family: Gilroy-SemiBold;color: white;text-align: center;margin: 0px;white-space: nowrap;font-size: 18px;margin-top: 10px;" class="card-title">Liberación HES\SP\PC
               </h5>
               <p style="color: white;" class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit
                 amet consectetur adipisicing elit.</p>
@@ -165,7 +165,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <button id="btnVacaciones" class="btn-acindar-primary w-100 mt-2">
+        <button data-bs-toggle="collapse" href="#collapseVacaciones" role="button" aria-expanded="false" aria-controls="collapseVacaciones" id="btnVacaciones" class="btn-acindar-primary w-100 mt-2">
           Vacaciones
         </button>
         <div class="collapse mt-3" id="collapseVacaciones">
@@ -197,7 +197,7 @@
             </button>
           </div>
         </div>
-        <button id="btnAnticipo" class="btn-acindar-primary w-100 mt-2">
+        <button data-bs-toggle="collapse" href="#collapseAnticipo" role="button" aria-expanded="false" aria-controls="collapseAnticipo" id="btnAnticipo" class="btn-acindar-primary w-100 mt-2">
         Anticipio de Sueldo
         </button>
         <div class="collapse mt-3" id="collapseAnticipo">
@@ -222,7 +222,7 @@
             </button>
           </div>
         </div>
-        <button id="btnRendiciones" class="btn-acindar-primary w-100 mt-2">
+        <button data-bs-toggle="collapse" href="#collapseRendiciones" role="button" aria-expanded="false" aria-controls="collapseRendiciones" id="btnRendiciones" class="btn-acindar-primary w-100 mt-2">
           Rendiciones
         </button>
         <div class="collapse mt-3" id="collapseRendiciones">
@@ -243,7 +243,7 @@
                 <svg style="fill: white;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
                   <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
                 </svg>
-              <span class="ms-2">Gastos</span>
+              <span class="ms-2">Gastos Propios</span>
             </div>
             </button>
             <button class="btn btn-success w-100 mt-1">
